# jangal

./: Cargo.toml  README.md
src/: library.rs  main.rs  settings.rs  ui.rs
src/ui/: app.rs  menu_button.rs  screen.rs
src/ui/screen/: home.rs  player.rs  settings.rs
src/ui/screen/home/: cards.rs  seasons.rs  sidebar.rs  top_bar.rs
src/ui/screen/player/: seekbar.rs
