[package]
name = "jangal"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = "1.0.89"
async-std = "1.13.0"
chrono = "0.4.38"
directories = "5.0.1"
env_logger = "0.11.5"
futures = "0.3.30"
iced = { version = "0.14", features = ["svg", "advanced", "tokio", "wgpu"] }
iced_graphics = "0.14"
iced_video_player = { git = "https://github.com/jazzfool/iced_video_player" }
gstreamer = "0.23"
itertools = "0.13.0"
log = "0.4.22"
normpath = "1.3.0"
regex = "1.11.0"
reqwest = { version = "0.12.8", features = ["stream"] }
rfd = "0.15.0"
rustc-hash = "2.0.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sublime_fuzzy = "0.7.0"
tmdb-api = { git = "https://github.com/jazzfool/tmdb-api" }
url = "2.5.2"
keepawake = "0.5"
tokio = "1.41"
locale-codes = "0.3"
html-escape = "0.2"

[profile.release-debug]
inherits = "release"
debug = true
